styles.css
body {
  line-height: 1.5;
  display: block;
  justify-content: center;
  position: relative;
}

main {
  /* border: 1px solid black; */
  /* display: block; */
  height: 75%;
  width: 30%;
  padding: 20px;
  min-height: 660px;
  min-width: 350px;
  margin: auto;
}

main > #pokemon-card {
  height: 85vh;
  width: auto;
}

.card-wrapper {
  background-color: rgb(230, 66, 66);
  border: 11px solid rgba(255, 217, 0, 0.877);
  border-radius: 5px;
  height: 90%;
  min-height: 550px;
  box-shadow: 1px 2px 10px gray;
}

/* Name, HP, type */
#top-text-wrapper {
  text-align: center;
  padding-top: 10px;
  padding-left: 15px;
  padding-right: 15px;
  flex-wrap: nowrap;
}

/* .top-text {
  position: absolute;
} */

#pokemon-name {
  font-weight: 700;
}

#top-text-wrapper span:not(:first-child) {
  margin: 0;
  margin-left: 110px;
}

#top-text-wrapper span:last-child {
  margin: 0;
}

/* Image */
.img-wrapper {
  background-color: whitesmoke;
  display: flex;
  position: relative;
  width: 75%;
  min-height: 150px;
  margin: auto;
  margin-bottom: 0;
  border: 7px ridge gold;
  border-radius: 1px;
  box-shadow: 5px 5px 5px black;
}

.sprites {
  margin: auto;
  padding: 0;
  min-height: 245px;
  min-width: 245px;
}

/* Stats */
#stats-wrapper {
  text-align: center;
  margin-top: 0;
  padding-top: 3px;
  margin-bottom: 80px;
}

/* Abilities */
.ability-wrapper {
  justify-content: space-between;
  text-align: center;
  margin-bottom: 75px;
}

/* Actions */
#actions-section {
  display: flex;
  padding-top: 25px;
  justify-content: center;
}

#choose-random {
  background-color: rgb(221, 221, 221);
  min-height: 30px;
  border-radius: 20px;
  border: 1.5px solid darkgray;
  box-shadow: 2px 2px 2px black;
}

/* SVG */
/* thanks https://github.com/duiker101/pokemon-type-svg-icons/blob/1.0.0/style.css */
.icon {
  border-radius: 100%;
  height: 25px;
  width: 25px;
  margin: auto;
  transition: 200ms all;
}

.icon:hover {
  filter: saturate(200%);
  transform: scale(1.1);
  cursor: pointer;
}

.icon img {
  height: 60%;
  width: 60%;
  margin: 20%;
}

.bug {
  background: #92bc2c;
  box-shadow: 0 0 20px #92bc2c;
}

.dark {
  background: #595761;
  box-shadow: 0 0 20px #595761;
}

.dragon {
  background: #0c69c8;
  box-shadow: 0 0 20px #0c69c8;
}

.electric {
  background: #f2d94e;
  box-shadow: 0 0 20px #f2d94e;
}

.fire {
  background: #fba54c;
  box-shadow: 0 0 20px #fba54c;
}

.fairy {
  background: #ee90e6;
  box-shadow: 0 0 20px #ee90e6;
}

.fighting {
  background: #d3425f;
  box-shadow: 0 0 20px #d3425f;
}

.flying {
  background: #a1bbec;
  box-shadow: 0 0 20px #a1bbec;
}

.ghost {
  background: #5f6dbc;
  box-shadow: 0 0 20px #5f6dbc;
}

.grass {
  background: #5fbd58;
  box-shadow: 0 0 20px #5fbd58;
}

.ground {
  background: #da7c4d;
  box-shadow: 0 0 20px #da7c4d;
}

.ice {
  background: #75d0c1;
  box-shadow: 0 0 20px #75d0c1;
}

.normal {
  background: #a0a29f;
  box-shadow: 0 0 20px #a0a29f;
}

.poison {
  background: #b763cf;
  box-shadow: 0 0 20px #b763cf;
}

.psychic {
  background: #fa8581;
  box-shadow: 0 0 20px #fa8581;
}

.rock {
  background: #c9bb8a;
  box-shadow: 0 0 20px #c9bb8a;
}

.steel {
  background: #5695a3;
  box-shadow: 0 0 20px #5695a3;
}

.water {
  background: #539ddf;
  box-shadow: 0 0 20px #539ddf;
}

